# PayScribe

./: .gitignore  Cargo.toml  LICENSE  README.md  dialogue.rs
.github/workflows/: rust.yml
docs/: TimeZones.md
src/: lib.rs  main.rs  redis.rs
src/bot/: actions.rs  api.rs  currency.rs  dispatcher.rs  handler.rs  handlers.rs  mod.rs  optimizer.rs  processor.rs  redis.rs
src/bot/handler/: add_payment.rs  constants.rs  delete_payment.rs  edit_payment.rs  general.rs  mod.rs  pay_back.rs  settings.rs  spendings.rs  utils.rs  view_balances.rs  view_payments.rs
src/bot/redis/: balance.rs  chat.rs  connect.rs  manager.rs  mod.rs  payment.rs  request.rs  spending.rs  user.rs
src/docs/: Currencies.md  README.md
