[package]
name = "payscribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
redis = "0.23.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.30"
dotenv = "0.15.0"

[lib]
name = "payscribe"
path = "src/lib.rs"
