[package]
name = "payscribe"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
redis = "0.23.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.30"
dotenv = "0.15.0"
thiserror = "1.0.58"
serde = "1.0.197"
serde_json = "1.0.114"
regex = "1.10.4"
chrono-tz = "0.9.0"
reqwest = { version = "0.12.3", features = ["json"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
name = "payscribe"
path = "src/lib.rs"
